feature: rota para relatório em pdf

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=Vipcommerce
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:PEF7+wfh40aN+mkceLd8Eei59mMzw3ZFtWpwK+qMYf4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=8082
+DB_HOST=172.24.0.4
+DB_PORT=3306
 DB_DATABASE=vipcommerce
-DB_USERNAME=vipcommerce
+DB_USERNAME=root
 DB_PASSWORD=vipcommerce
 
 BROADCAST_DRIVER=log
