improvement: melhoria na documentação

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_URL=http://localhost:8080
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=172.24.0.4
+DB_HOST=vipcommerce-mysql
 DB_PORT=3306
 DB_DATABASE=vipcommerce
 DB_USERNAME=root
